--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "emoji-mart-vue-fast": "^10.0.1",
     "uuid": "^3.4.0",
     "vue": "^2.6.11",
     "vue-sortable": "^0.1.3"
