--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "emoji-mart-vue-fast": "^10.0.1",
+    "twemoji": "^13.0.2",
     "uuid": "^3.4.0",
     "vue": "^2.6.11",
     "vue-sortable": "^0.1.3"
@@ -40,7 +41,12 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-fallthrough": ["error", { "commentPattern": "break[\\s\\w]*omitted" }]
+      "no-fallthrough": [
+        "error",
+        {
+          "commentPattern": "break[\\s\\w]*omitted"
+        }
+      ]
     }
   },
   "browserslist": [
